<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:padding="@dimen/padding_regular"
        android:text="@string/article_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="#5E35B1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/article_subheading"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:baselineAligned="true"
                        android:padding="@dimen/padding_regular"
                        android:text="@string/article_subtitle"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    <TextView
                        android:id="@+id/article"
                        android:layout_width="500dp"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:lineSpacingExtra="@dimen/line_spacing"
                        android:padding="@dimen/padding_regular"
                        android:text="@string/article_text" />


                </LinearLayout>
                <EditText
                    android:id="@+id/Comment_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:hint="@string/please_enter_your_name"
                    android:inputType="textPersonName"
                    />

                <EditText
                    android:id="@+id/Comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:hint="@string/please_enter_your_comment"
                    android:inputType="textMultiLine"/>
                <Button
                    android:id="@+id/comment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="288dp"
                    android:onClick="send"
                    android:text="@string/add_comment"
                    />


            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>